# camvx

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/sensor_init/include/: example_sensor_init_config.h
main/: CMakeLists.txt  Kconfig.projbuild  camera_dsi_main.c  idf_component.yml  image_classifier.cc  image_classifier.h  image_preprocessing.c  image_preprocessing.h  main_functions.cc  main_functions.h  model.h  webserver.c  webserver.h
