idf_component_register(
    SRCS
        camera_dsi_main.c
        webserver.c
        main_functions.cc
        constants.cc
        output_handler.cc
        model.cc
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_mm
        esp_driver_isp
        esp_driver_cam
        esp_driver_i2c
        sensor_init
        esp_driver_jpeg
        esp_wifi
        esp_netif
        nvs_flash
        esp_event
        esp_http_server
        esp_driver_ppa
)
